--- a/styles.tailwind.css
+++ b/styles.tailwind.css
@@ -21,6 +21,7 @@
 
 .markdown-editor-component .cm-content {
 	white-space: pre-wrap !important;
+	flex-shrink: 1 !important;
 }
 
 .popover.hover-popover > .markdown-embed > .markdown-embed-content > .markdown-preview-view {
